spotlyt header complete

--- a/src/index.css
+++ b/src/index.css
@@ -2,3 +2,16 @@
 @tailwind components;
 @tailwind utilities;
 
+
+body {
+    font-family: "Montserrat", sans-serif;
+}
+.container {
+    @apply mx-auto px-8 py-[6px]
+}
+.hover-effect {
+    @apply inline-block hover:text-[#FFC107] cursor-pointer after:block after:content-[""] after:border-b-2 after:border-b-[#FFC107] after:scale-x-0 after:transition after:ease-in-out after:duration-300 after:origin-[100%_50%] hover:after:origin-[0%_50%] hover:after:scale-x-100;
+}
+.active-menu {
+    @apply inline-block cursor-pointer after:block after:content-[""] after:border-b-2 after:border-b-[#FFC107] after:scale-x-100 after:transition after:ease-in-out after:duration-300 after:origin-[100%_50%];
+}
